{
  "version": 4,
  "terraform_version": "1.6.4",
  "serial": 227,
  "lineage": "86f1b3fa-c8b3-9bb5-412f-39c0f615715d",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "elastic_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-028c735363d268241",
            "domain": "vpc",
            "id": "eipalloc-028c735363d268241",
            "network_border_group": "ap-south-1",
            "public_dns": "ec2-13-201-146-204.ap-south-1.compute.amazonaws.com",
            "public_ip": "13.201.146.204",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "sagar-nat-elastic-ip"
            },
            "tags_all": {
              "Name": "sagar-nat-elastic-ip"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:528462248584:internet-gateway/igw-052d828c96b770605",
            "id": "igw-052d828c96b770605",
            "owner_id": "528462248584",
            "tags": {
              "Name": "sagar-internet-gateway"
            },
            "tags_all": {
              "Name": "sagar-internet-gateway"
            },
            "vpc_id": "vpc-0b1a24085a874a5ff"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:528462248584:loadbalancer/app/sagar-external-alb/a92ae8af34de03c4",
            "arn_suffix": "app/sagar-external-alb/a92ae8af34de03c4",
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "sagar-external-alb-613043036.ap-south-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:ap-south-1:528462248584:loadbalancer/app/sagar-external-alb/a92ae8af34de03c4",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "sagar-external-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0a1912728d9a3e942"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-02e72d72d3e3e5477"
              },
              {
                "subnet_id": "subnet-0d8b45c27dbb0ff7d"
              }
            ],
            "subnets": [
              "subnet-02e72d72d3e3e5477",
              "subnet-0d8b45c27dbb0ff7d"
            ],
            "vpc_id": "vpc-0b1a24085a874a5ff",
            "xff_header_processing_mode": "append",
            "zone_id": "ZP97RAFLXTNZK"
          },
          "dependencies": [
            "aws_security_group.alb_security_group",
            "aws_subnet.public_subnet",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "alb_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:528462248584:listener/app/sagar-external-alb/a92ae8af34de03c4/6c5b70d532a85fd7",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:528462248584:targetgroup/sagar-alb-target-group/95ceb6078c1de17e",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:528462248584:listener/app/sagar-external-alb/a92ae8af34de03c4/6c5b70d532a85fd7",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-south-1:528462248584:loadbalancer/app/sagar-external-alb/a92ae8af34de03c4",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.alb",
            "aws_lb_target_group.target_group",
            "aws_security_group.alb_security_group",
            "aws_subnet.public_subnet",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "target_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:528462248584:targetgroup/sagar-alb-target-group/95ceb6078c1de17e",
            "arn_suffix": "targetgroup/sagar-alb-target-group/95ceb6078c1de17e",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:528462248584:targetgroup/sagar-alb-target-group/95ceb6078c1de17e",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "sagar-alb-target-group",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0b1a24085a874a5ff"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-028c735363d268241",
            "association_id": "eipassoc-0441717b91a9c3511",
            "connectivity_type": "public",
            "id": "nat-057403707b2ab19e6",
            "network_interface_id": "eni-08798054e9afb2299",
            "private_ip": "10.0.0.13",
            "public_ip": "13.201.146.204",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0d8b45c27dbb0ff7d",
            "tags": {
              "Name": "sagar-nat-gateway"
            },
            "tags_all": {
              "Name": "sagar-nat-gateway"
            }
          },
          "dependencies": [
            "aws_eip.elastic_ip",
            "aws_internet_gateway.internet_gateway",
            "aws_subnet.public_subnet",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:528462248584:route-table/rtb-0109a619e64d34e24",
            "id": "rtb-0109a619e64d34e24",
            "owner_id": "528462248584",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-057403707b2ab19e6",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "sagar-private-route-table"
            },
            "tags_all": {
              "Name": "sagar-private-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b1a24085a874a5ff"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.elastic_ip",
            "aws_internet_gateway.internet_gateway",
            "aws_nat_gateway.nat_gateway",
            "aws_subnet.public_subnet",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:528462248584:route-table/rtb-0e76256cef2e818dd",
            "id": "rtb-0e76256cef2e818dd",
            "owner_id": "528462248584",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-052d828c96b770605",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "sagar-public-route-table"
            },
            "tags_all": {
              "Name": "sagar-public-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b1a24085a874a5ff"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.internet_gateway",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_rt_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fa9bff25ea0c57da",
            "route_table_id": "rtb-0109a619e64d34e24",
            "subnet_id": "subnet-0454425f198218dfa"
          },
          "dependencies": [
            "aws_eip.elastic_ip",
            "aws_internet_gateway.internet_gateway",
            "aws_nat_gateway.nat_gateway",
            "aws_route_table.private_route_table",
            "aws_subnet.private_subnet",
            "aws_subnet.public_subnet",
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0140a3458c3ce60b2",
            "route_table_id": "rtb-0109a619e64d34e24",
            "subnet_id": "subnet-0550c6922a1ef5a8e"
          },
          "dependencies": [
            "aws_eip.elastic_ip",
            "aws_internet_gateway.internet_gateway",
            "aws_nat_gateway.nat_gateway",
            "aws_route_table.private_route_table",
            "aws_subnet.private_subnet",
            "aws_subnet.public_subnet",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_rt_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0aee7a0f1e8314572",
            "route_table_id": "rtb-0e76256cef2e818dd",
            "subnet_id": "subnet-0d8b45c27dbb0ff7d"
          },
          "dependencies": [
            "aws_internet_gateway.internet_gateway",
            "aws_route_table.public_route_table",
            "aws_subnet.public_subnet",
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02cf38609a4bf33dc",
            "route_table_id": "rtb-0e76256cef2e818dd",
            "subnet_id": "subnet-02e72d72d3e3e5477"
          },
          "dependencies": [
            "aws_internet_gateway.internet_gateway",
            "aws_route_table.public_route_table",
            "aws_subnet.public_subnet",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:528462248584:security-group/sg-0a1912728d9a3e942",
            "description": "ALB Security Group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a1912728d9a3e942",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP from Internet",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "sagar-alb-security-group",
            "name_prefix": "",
            "owner_id": "528462248584",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "sagar-alb-security-group"
            },
            "tags_all": {
              "Name": "sagar-alb-security-group"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b1a24085a874a5ff"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "asg_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:528462248584:security-group/sg-011201e0957310022",
            "description": "ASG Security Group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-011201e0957310022",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "HTTP from ALB",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0a1912728d9a3e942"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "sagar-asg-security-group",
            "name_prefix": "",
            "owner_id": "528462248584",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "sagar-asg-security-group"
            },
            "tags_all": {
              "Name": "sagar-asg-security-group"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b1a24085a874a5ff"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb_security_group",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:528462248584:subnet/subnet-0454425f198218dfa",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0454425f198218dfa",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "528462248584",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "sagar-private-subnet-ap-south-1a"
            },
            "tags_all": {
              "Name": "sagar-private-subnet-ap-south-1a"
            },
            "vpc_id": "vpc-0b1a24085a874a5ff"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:528462248584:subnet/subnet-0550c6922a1ef5a8e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0550c6922a1ef5a8e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "528462248584",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "sagar-private-subnet-ap-south-1b"
            },
            "tags_all": {
              "Name": "sagar-private-subnet-ap-south-1b"
            },
            "vpc_id": "vpc-0b1a24085a874a5ff"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:528462248584:subnet/subnet-0d8b45c27dbb0ff7d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d8b45c27dbb0ff7d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "528462248584",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "sagar-public-subnet-ap-south-1a"
            },
            "tags_all": {
              "Name": "sagar-public-subnet-ap-south-1a"
            },
            "vpc_id": "vpc-0b1a24085a874a5ff"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:528462248584:subnet/subnet-02e72d72d3e3e5477",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02e72d72d3e3e5477",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "528462248584",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "sagar-public-subnet-ap-south-1b"
            },
            "tags_all": {
              "Name": "sagar-public-subnet-ap-south-1b"
            },
            "vpc_id": "vpc-0b1a24085a874a5ff"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:528462248584:vpc/vpc-0b1a24085a874a5ff",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0032a69b8ec182ba9",
            "default_route_table_id": "rtb-0ec53813affab792b",
            "default_security_group_id": "sg-0d627c55b345cb885",
            "dhcp_options_id": "dopt-0ca6603519e718cd8",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0b1a24085a874a5ff",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0ec53813affab792b",
            "owner_id": "528462248584",
            "tags": {
              "Name": "sagar-vnet"
            },
            "tags_all": {
              "Name": "sagar-vnet"
            }
          }
        }
      ]
    }
  ]
}